<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/listCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:padding="8dp"
            android:text="@string/list_category"
            android:textAlignment="center"
            android:textColor="?android:textColorSecondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listCategory"
            android:padding="8dp"
            android:text="@string/list_description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/listContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listDesc"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/list_contact"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/listOrderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listContact"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/list_orderDate"
            android:textAlignment="textEnd" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listOrderDate"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/listModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/list_modify" />

            <Button
                android:id="@+id/listCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/list_cancel" />

            <Button
                android:id="@+id/listDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/list_delete" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
