<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreationActivity">

    <TextView
        android:id="@+id/createWelcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_welcome_msg"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/createCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/create_category_hint"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createWelcomeMsg"/>

    <EditText
        android:id="@+id/createDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/create_description_hint"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createCategory"/>

    <EditText
        android:id="@+id/createContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/create_contact_hint"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createDescription"/>

    <TextView
        android:id="@+id/createSpinnerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="13dp"
        android:text="@string/create_state_of_order"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart"
        android:layout_below="@id/createContactEmail"/>

    <Spinner
        android:id="@+id/createStateSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/createSpinnerLabel"/>

    <RadioGroup
        android:id="@+id/createPriorityRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/createStateSpinner">

        <RadioButton
            android:id="@+id/createPriorityTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_top_priority"/>

        <RadioButton
            android:id="@+id/createPriorityMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_medium_priority"/>

        <RadioButton
            android:id="@+id/createPriorityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_low_priority"/>
    </RadioGroup>

    <EditText
        android:id="@+id/createOrderItemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/create_order_items_list"
        android:inputType="textMultiLine|text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createPriorityRadio"/>

    <EditText
        android:id="@+id/createOrderPartyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/create_related_parties_list"
        android:inputType="textMultiLine|text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createOrderItemList"/>

    <EditText
        android:id="@+id/createServiceNotesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/create_service_notes_list"
        android:inputType="textMultiLine|text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/createOrderPartyList"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createServiceNotesList"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createServiceOrder"
            android:text="@string/main_create_service" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="cancelServiceOrder"
            android:text="@string/create_cancel" />
    </LinearLayout>
</RelativeLayout>