<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainWelcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:text="@string/main_welcome_msg"
        android:textAlignment="center"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        />

    <Button
        android:id="@+id/mainCreateServiceBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_create_service"
        android:onClick="goToServiceOrderCreation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWelcomeMsg"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/mainListServicesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="goToListServiceOrders"
        android:text="@string/main_list_services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCreateServiceBtn" />

    <Button
        android:id="@+id/mainListPriorityServicesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="goToListCancelledServiceOrders"
        android:text="@string/main_list_priority_services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainListServicesBtn" />

    <Button
        android:id="@+id/mainList5ServicesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="goToListCompletedServiceOrders"
        android:text="@string/main_list_5_services"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainListPriorityServicesBtn"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>